# backend/swagger.yml
@@ -68,9 +68,9 @@ paths:
           description: "Success"
         400:
           description: "Bad Request"
-  /addChannel:
+  /addWorkspace:
     post:
-      summary: Add channel
+      summary: Add Workspace
       requestBody:
         content:
           application/json:
@@ -81,16 +81,16 @@ paths:
                   type: string
                 username:
                   type: string
-                channelName:
+                workspaceName:
                   type: string
       responses:
         200:
           description: "Success"
         400:
           descripton: "Bad Request"
-  /getChannels:
+  /getWorkspaces:
     post:
-      summary: Get All Channels
+      summary: Get All Workspaces
       requestBody:
         content:
           application/json:
@@ -101,7 +101,7 @@ paths:
                   type: string
       responses:
         200:
-          description: "Retrieved Channels"
+          description: "Retrieved Workspaces"
         400:
           description: "Bad Request"
           
